[package]
name = "dway-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true}
memory-stats = { workspace = true}
calloop = "0.10"
anyhow = "1.0.75"
send_wrapper = "0.6.0"
winit = { version = "*", default-features = false }
tracing-appender = "0.2.2"
tracing-subscriber = { version="0.3.17",features=["env-filter"] }
log-panics = { version = "2", features = ["with-backtrace", "backtrace"]}
structstruck = "0.4.1"
smart-default = {workspace = true}
smallvec = "1.11.0"
nix = { version="0.27.1", features=["poll"] }
bevy = {workspace = true}
tracing-journald = "0.3.0"
backtrace = "0.3"
