[dependencies]
anyhow = "1.0.75"
bevy_framepace = "0.14"
bevy_mod_debugdump = "0.9.0"
bevy_prototype_lyon = "0.10.0"
chrono = "0.4.31"
crossbeam-channel = "0.5.6"
failure = "0.1.8"
lazy_static = "1.4.0"
log = "0.4.17"
lru = "0.12.0"
num_cpus = "1.15.0"
pretty_env_logger = "0.5.0"
rand = "0.8"
uuid = "1.2.2"
dhat = {version="0.3.2", optional=true}
dexterous_developer = {  workspace = true, optional=true }

[dependencies.bevy]
features = ["jpeg", "wayland", "serialize", "default_font", "subpixel_glyph_atlas"]
version = "0.12"

[dependencies.bevy-inspector-egui]
optional = true
version = "0.21"

[dependencies.clap]
features = ["derive"]
version = "4.4.7"

[dependencies.dway-client-core]
path = "../dway-client-core/"

[dependencies.dway-server]
path = "../dway-server/"

[dependencies.dway-tty]
path = "../dway-tty/"

[dependencies.dway-ui]
path = "../dway-ui/"

[dependencies.dway-util]
path = "../dway-util/"

[dependencies.serde]
optional = true
version = "1"

[dependencies.tracing-subscriber]
features = ["env-filter"]
version = "0.3"

[features]
default = [
    "dway_log",
    "dynamic_reload",
    "debug",
]
debug = ["dep:bevy-inspector-egui"]
dway_log = []
dynamic_reload = ["dep:dexterous_developer", "dep:serde", "dway-ui/dynamic_reload" , "bevy/dynamic_linking", "bevy/embedded_watcher"]
eventloop = []
single_thread = []
dhat-heap = ["dep:dhat"]    # if you are doing heap profiling
dhat-ad-hoc = ["dep:dhat"]  # if you are doing ad hoc profiling
trace_tracy = ["bevy/trace_tracy","cpu_profile"]
trace_chrome = ["bevy/trace_chrome","cpu_profile"]
heap_profile = ["dhat-heap"]
cpu_profile = []

[lib]
crate-type = ["dylib", "rlib"]
path = "src/lib.rs"
name = "dway_main"

[package]
edition = "2021"
name = "dway"
version = "0.1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.bevy]
opt-level = 3

[profile.dev.package.bevy_prototype_lyon]
debug-assertions = false

[profile.dev.package.lyon_path]
debug-assertions = false

[profile.release]
debug = 1
lto = "thin"
