[dependencies]
bevy-relationship = {path="../bevy-relationship"}
bevy-relationship-derive = {path="../bevy-relationship-derive"}
dway-test-client = {path="../dway-server-test/dway-test-client", optional=true}
anyhow = {workspace=true}
bevy_framepace = "0.15"
bevy_mod_debugdump = { version="0.10.0",optional=true }
bevy_prototype_lyon = "0.11.0"
chrono = {workspace=true}
crossbeam-channel = {workspace=true}
failure = {workspace=true}
lazy_static = {workspace=true}
log = {workspace=true}
lru = {workspace=true}
num_cpus = "1.15.0"
pretty_env_logger = {workspace=true}
rand = {workspace=true}
uuid = {workspace=true}
dhat = {version="0.3.2", optional=true}
bevy_egui = "0.26.0"
dexterous_developer = { workspace = true, optional=true}
bevy_dexterous_developer = {workspace = true, optional=true}
cfg-if = {workspace=true}
pprof = {version="0.13", optional=true, features = ["flamegraph"]}


[dependencies.bevy]
features = ["jpeg", "wayland", "serialize", "default_font", "subpixel_glyph_atlas", "embedded_watcher"]
workspace = true

[dependencies.bevy-inspector-egui]
optional = true
version = "=0.23.3"
features = ["highlight_changes"]

[dependencies.clap]
features = ["derive"]
version = "4.4.7"

[dependencies.dway-client-core]
path = "../dway-client-core/"

[dependencies.dway-server]
path = "../dway-server/"

[dependencies.dway-tty]
path = "../dway-tty/"

[dependencies.dway-ui]
path = "../dway-ui/"

[dependencies.dway-ui-framework]
path = "../dway-ui-framework/"

[dependencies.dway-util]
path = "../dway-util/"

[dependencies.serde]
optional = true
workspace = true

[dependencies.tracing-subscriber]
features = ["env-filter"]
workspace = true

[features]
default = [
    "dway_log",
    # "hot_reload",
]
inspector = [ "dep:bevy-inspector-egui"]
dump_system_graph = ["dep:bevy_mod_debugdump"]
debug = [ "inspector", "dump_system_graph", "dep:dway-test-client"]
dway_log = []
hot_reload = ["dep:dexterous_developer", "dep:bevy_dexterous_developer", "dep:serde", "dway-ui/hot_reload"]
single_thread = []
dhat-heap = ["dep:dhat"]    # if you are doing heap profiling
dhat-ad-hoc = ["dep:dhat"]  # if you are doing ad hoc profiling
trace_tracy = ["bevy/trace_tracy","cpu_profile"]
trace_chrome = ["bevy/trace_chrome","cpu_profile"]
pprof = ["cpu_profile", "dep:pprof"]
heap_profile = ["dhat-heap"]
cpu_profile = []

[lib]
crate-type = ["dylib", "rlib"]
path = "src/lib.rs"
name = "dway_main"

[package]
edition = "2021"
name = "dway"
version = "0.1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.bevy]
opt-level = 3

[profile.dev.package.bevy_prototype_lyon]
debug-assertions = false

[profile.dev.package.gfx-backend-vulkan]
opt-level = 3
debug-assertions = false

[profile.dev.package.lyon_path]
debug-assertions = false

[profile.release]
lto = "thin"
strip = true

[package.metadata]
hot_reload_features = ["bevy/dynamic_linking", "bevy/embedded_watcher"]
