[package]
name = "dway_winit"
version = "0.1.0"
edition = "2021"

[features]
trace = []
wayland = ["winit/wayland"]
x11 = ["winit/x11"]
accesskit_unix = ["accesskit_winit/accesskit_unix"]

[dependencies]
# bevy
bevy = { version = "0.11" }

# other
winit = { version = "0.28", default-features = false }
accesskit_winit = { version = "0.12", default-features = false }
approx = { version = "0.5", default-features = false }
raw-window-handle = "0.5"

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.28", default-features = false, features = ["android-native-activity"] }
once_cell = "1.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
web-sys = "0.3"
crossbeam-channel = "0.5"

[package.metadata.docs.rs]
features = ["x11"]
