[package]
name = "dway-test-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {workspace=true}
clap = { version="4.5", features=["derive"] }
tokio = {workspace=true, features=["rt", "rt-multi-thread", "sync"]}

cxx = {version="1.0.124"}
cxx-qt = {version="0.6.1"}
cxx-qt-lib = {version="0.6.1"}

gtk4 = "0.8.2"

winit = {version="0.30"}
wgpu = { workspace = true, features = [
    "wgsl",
    "dx12",
    "metal",
] }
bevy={workspace=true}

[build-dependencies]
cxx-qt-build = { version = "0.6.1", features = [ "link_qt_object_files" ] }
